[Netatmo] Enhance webhook handling and dispatching (#15045)
* Enhance webhook handling and dispatching

Signed-off-by: clinique <gael@lhopital.org>

* Corrects flapping channels on Home when using single home for security and energy

Signed-off-by: clinique <gael@lhopital.org>

* Some code enhancement

Signed-off-by: clinique <gael@lhopital.org>

* Adding some missing EventType submitted on the webhook

Signed-off-by: clinique <gael@lhopital.org>

---------

Signed-off-by: clinique <gael@lhopital.org>
Signed-off-by: Jørgen Austvik <jaustvik@acm.org>