@@ -18,7 +18,6 @@ import java.net.URI;
 import java.time.ZonedDateTime;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.ws.rs.core.UriBuilder;
 
@@ -94,7 +93,7 @@ public class SecurityApi extends RestManager {
 
         // Remove unneeded events being before oldestKnown
         return events.stream().filter(event -> freshestEventTime == null || event.getTime().isAfter(freshestEventTime))
-                .sorted(Comparator.comparing(HomeEvent::getTime).reversed()).collect(Collectors.toList());
+                .sorted(Comparator.comparing(HomeEvent::getTime).reversed()).toList();
     }
 
     public List<HomeEvent> getPersonEvents(String homeId, String personId) throws NetatmoException {
